<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/Theme.AppCompat"
    tools:context=".views.TerminformActivity">


    <EditText
        android:id="@+id/editText_Termin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/example_umrandung"
        android:ems="10"
        android:hint="@string/Hinweis_Feld1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/Polar"
        android:padding="10dp"
        android:textColorHint="@color/Polar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/editText_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/example_umrandung"
        android:clickable="false"
        android:digits=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/Hinweis_Feld2"
        android:importantForAutofill="no"
        android:inputType="none"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/Polar"
        android:textColorHint="@color/Polar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Termin"
        tools:ignore="TextFields,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editText_Notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/example_umrandung"
        android:ems="10"
        android:hint="@string/Hinweis_Feld3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHint="@color/Polar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Date"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/Spinner_Farbkategorien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/example_umrandung"
        android:minHeight="24sp"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Notes"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Speicherung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background_selector"
        android:textColor="@drawable/button_textcolor_selctor"
        android:text="@string/Event_speichern"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Spinner_Farbkategorien"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>